--- a/demo/index.html
+++ b/demo/index.html
@@ -26,16 +26,16 @@
             ];
         </script>
 
-        <script>
-        	var config = {
-        		apiKey: '',
-        		organization_Id: '',
-        		host: ''
-        	}
-        </script>
+        <!--<script>-->
+        <!--	var config = {-->
+        <!--		apiKey: '',-->
+        <!--		organization_Id: '',-->
+        <!--		host: ''-->
+        <!--	}-->
+        <!--</script>-->
 
         <!--<script src="https://cdn.cocreate.app/element-config/latest/CoCreate-element-config.min.js"></script>-->
-        <script src="../../../../CoCreateJS/dist/CoCreate.js"></script>
+        <script src="../../../CoCreateJS/dist/CoCreate.js"></script>
         <!--<script src="../dist/CoCreate-element-config.js"></script>-->
 
     </body>
