--- a/demo/index.html
+++ b/demo/index.html
@@ -27,7 +27,7 @@
         </script>
 
         <!--<script>-->
-        <!--	var config = {-->
+        <!--	var CoCreateConfig = {-->
         <!--		apiKey: '',-->
         <!--		organization_id: '',-->
         <!--		host: ''-->
