--- a/demo/index.html
+++ b/demo/index.html
@@ -8,7 +8,8 @@
         <link rel="icon" href="https://cdn.cocreate.app/favicon.ico" type="image/ico" sizes="16x16">
         <title>element-config | CoCreateJS</title>
 
-    </head>
+		<link rel="manifest" href="/manifest.json" />
+	</head>
 
     <body id="a">
         <h1 id="h1">hello 1</h1>
