--- a/demo/index.html
+++ b/demo/index.html
@@ -8,7 +8,7 @@
         <link rel="icon" href="https://cdn.cocreate.app/favicon.ico" type="image/ico" sizes="16x16">
         <title>element-config | CoCreateJS</title>
 
-		<link rel="manifest" href="/manifest.json" />
+		<link rel="manifest" href="/manifest.webmanifest" />
 	</head>
 
     <body id="a">
