--- a/demo/index.html
+++ b/demo/index.html
@@ -19,7 +19,7 @@
         <h2 id="h2">hello 2</h2>
 
         <element-config
-            config-target="#d"
+            config-selector="#d"
             id="b"
             collection=""
             document_id=""
@@ -41,7 +41,12 @@
                 mouseover="true"></config>
         </element-config>
 
-        <script id="c" config-target="#a" collection="" document_id="" name="">
+        <script
+            id="c"
+            config-selector="#a"
+            collection=""
+            document_id=""
+            name="">
             [
                 {
                     selector: "*",
