fix: crud attributes renamed

--- a/demo/index.html
+++ b/demo/index.html
@@ -21,8 +21,8 @@
         <element-config
             config-selector="#d"
             id="b"
-            collection=""
-            document_id=""
+            array=""
+            object=""
             name=""
             style="display: none">
             <config
@@ -41,12 +41,7 @@
                 mouseover="true"></config>
         </element-config>
 
-        <script
-            id="c"
-            config-selector="#a"
-            collection=""
-            document_id=""
-            name="">
+        <script id="c" config-selector="#a" array="" object="" name="">
             [
                 {
                     selector: "*",
