feat: name attribute and variable renamed to key

--- a/demo/index.html
+++ b/demo/index.html
@@ -23,7 +23,7 @@
             id="b"
             array=""
             object=""
-            name=""
+            key=""
             style="display: none">
             <config
                 selector="*"
@@ -41,7 +41,7 @@
                 mouseover="true"></config>
         </element-config>
 
-        <script id="c" config-selector="#a" array="" object="" name="">
+        <script id="c" config-selector="#a" array="" object="" key="">
             [
                 {
                     selector: "*",
