fix: replace cdn with /dist

--- a/demo/index.html
+++ b/demo/index.html
@@ -61,7 +61,7 @@
         </script>
 
         <!--<script src="https://cdn.cocreate.app/element-config/latest/CoCreate-element-config.min.js"></script>-->
-        <script src="https://cdn.cocreate.app/latest/CoCreate.min.js"></script>
+        <script src="/dist/CoCreate.js"></script>
         <!--<script src="../dist/CoCreate-element-config.js"></script>-->
     </body>
 </html>
