fix: update query attributes

--- a/demo/index.html
+++ b/demo/index.html
@@ -1,67 +1,67 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="utf-8" />
-        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-        <meta name="viewport" content="width=device-width, initial-scale=1" />
-        <link
-            rel="icon"
-            type="image/png"
-            sizes="32x32"
-            href="../assets/favicon.ico" />
-        <title>element-config | CoCreateJS</title>
+	<head>
+		<meta charset="utf-8" />
+		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+		<meta name="viewport" content="width=device-width, initial-scale=1" />
+		<link
+			rel="icon"
+			type="image/png"
+			sizes="32x32"
+			href="../assets/favicon.ico" />
+		<title>element-config | CoCreateJS</title>
 
-        <link rel="manifest" href="/manifest.webmanifest" />
-    </head>
+		<link rel="manifest" href="/manifest.webmanifest" />
+	</head>
 
-    <body id="a">
-        <h1 id="h1">hello 1</h1>
-        <h2 id="h2">hello 2</h2>
+	<body id="a">
+		<h1 id="h1">hello 1</h1>
+		<h2 id="h2">hello 2</h2>
 
-        <element-config
-            config-selector="#d"
-            id="b"
-            array=""
-            object=""
-            key=""
-            style="display: none">
-            <config
-                selector="*"
-                editable="true"
-                draggable="true"
-                selectable="true"
-                hoverable="true"
-                mouseover="true"></config>
-            <config
-                selector="h1, h2"
-                editable="true"
-                draggable="true"
-                selectable="true"
-                hoverable="true"
-                mouseover="true"></config>
-        </element-config>
+		<element-config
+			config-query="#d"
+			id="b"
+			array=""
+			object=""
+			key=""
+			style="display: none">
+			<config
+				selector="*"
+				editable="true"
+				draggable="true"
+				selectable="true"
+				hoverable="true"
+				mouseover="true"></config>
+			<config
+				selector="h1, h2"
+				editable="true"
+				draggable="true"
+				selectable="true"
+				hoverable="true"
+				mouseover="true"></config>
+		</element-config>
 
-        <script id="c" config-selector="#a" array="" object="" key="">
-            [
-                {
-                    selector: "*",
-                    draggable: true,
-                    droppable: true,
-                    selectable: true,
-                    hoverable: true,
-                },
-                {
-                    selector: "h1, h2",
-                    draggable: true,
-                    droppable: true,
-                    selectable: true,
-                    hoverable: true,
-                },
-            ];
-        </script>
+		<script id="c" config-query="#a" array="" object="" key="">
+			[
+				{
+					selector: "*",
+					draggable: true,
+					droppable: true,
+					selectable: true,
+					hoverable: true
+				},
+				{
+					selector: "h1, h2",
+					draggable: true,
+					droppable: true,
+					selectable: true,
+					hoverable: true
+				}
+			];
+		</script>
 
-        <!--<script src="https://cdn.cocreate.app/element-config/latest/CoCreate-element-config.min.js"></script>-->
-        <script src="https://CoCreate.app/dist/CoCreate.js"></script>
-        <!--<script src="../dist/CoCreate-element-config.js"></script>-->
-    </body>
+		<!--<script src="https://cdn.cocreate.app/element-config/latest/CoCreate-element-config.min.js"></script>-->
+		<script src="https://CoCreate.app/dist/CoCreate.js"></script>
+		<!--<script src="../dist/CoCreate-element-config.js"></script>-->
+	</body>
 </html>
